# clawtoast

./: .gitignore  README.md
experiments/E001-blinks/: README.md
experiments/E001-blinks/src/: main.c
experiments/E002-remoteprog/: README.md  e002-wiringdiagram.qet
experiments/E003-tdd-nand/: README.md  platformio.ini
experiments/E003-tdd-nand/boards/: nucleo_l4p5zg.json
experiments/E003-tdd-nand/src/: main.c
experiments/E003-tdd-nand/test/: test_nand.py
parts/CLAW001-XX-keyboard-assy/: CLAW001-XX.kicad_pcb  CLAW001-XX.kicad_prl  CLAW001-XX.kicad_pro  CLAW001-XX.kicad_sch  fp-lib-table
parts/CLAW001-XX-keyboard-assy/CLAW001.pretty/: 1528-4954-ND.kicad_mod
projects/P001-nand-gate/: .gitignore  README.md  platformio.ini  pyproject.toml
projects/P001-nand-gate/src/: main.c
projects/P001-nand-gate/test/: test_nand.py  tests.py
python/: README.md  pyproject.toml
python/clawtoast/: steamer.py  test_steamer.py
python/typings/pyocd/core/: helpers.py  session.py  soc_target.py
