[tool.poetry]
name = "clawtoast"
version = "0.1.0"
description = ""
authors = ["Tanner Swett <tannerswett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pyocd = "^0.36.0"
pyright = "^1.1.339"

[tool.pyright]
strict = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
