[tool.poetry]
name = "p001-nand-gate"
version = "0.1.0"
description = ""
authors = ["Tanner Swett <tannerswett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
clawtoast = {path = "../../python"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
